--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,12 @@
-<h2>Edit Historical Landmark</h2>
+<h2>Edit <%= @landmark.name%></h2>
+<form action="/landmarks/<%= @landmarks.id%>" method="POST">
 
-<!-- add content here -->
+  <label>Name:</label><input type="text" name="landmark[name]" id="name" value="<%= @landmark.name%>">
+  <br><br>
+  <label>Year:</label><input type="text" name="landmark[year]" id="landmark_year" value="<%= @landmark.year%>"><br>
+
+  <input type="submit" value="Edit Landmark">
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
+</form>
