--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,8 @@
 <h2>All Historical Landmarks</h2>
-
-<!-- add content here -->
+<%  @landmarks.each do |landmark| %>
+  <a href="/landmarks<%= landmark.id %>"><%= landmark.name %></a><br>
+<% end %>
+<br><br>
 
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
