--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,13 +1,9 @@
-<form  action="/landmarks" method="post">
+<h1>Create a New Landmark</h1>
+<form method="POST" action="/landmarks">
+  <label><strong>Name:</strong></label><input type="text" name="landmark[name]" id="landmark_name"><br><br>
+  <label><strong>Year Completed:</strong></label><input type="text" name="landmark[year_completed]" id="landmark_year_completed"><br><br>
 
-
-<h2>Create New Landmark</h2>
-<label>Name:</label><input type="text" name="landmark[name]" id="new_landmark">
-<label>Year:</label><input type="text" name="landmark[year]" id="new_landmark_year"><br>
-<br>
-<input type="submit" value="Create New Landmark">
-
-
-<a class="button" href="/figures">Landmarks</a>
-<a class="button" href="/">Home</a>
+  <input type="submit" value="Create New Landmark">
+  <a class="button" href="/figures">Landmarks</a>
+  <a class="button" href="/">Home</a>
 </form>
