automatically backed up by learn

--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,8 +1,8 @@
-<h2>All Historical Landmarks</h2>
-<%  @landmarks.each do |landmark| %>
-  <a href="/landmarks<%= landmark.id %>"><%= landmark.name %></a><br>
+<h1>All Landmarks</h1>
+<% @landmarks.each do |landmark| %>
+  <a href="/landmarks/<%= landmark.id %>"><%= landmark.name %></a> - <%= landmark.year_completed %><br>
 <% end %>
 <br><br>
-
+<a href="/landmarks/new"><input type="button" value="Create New Landmark"></a>
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
