automatically backed up by learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,9 +1,8 @@
-<h2>Edit <%= @landmark.name%></h2>
-<form action="/landmarks/<%= @landmarks.id%>" method="POST">
-
-  <label>Name:</label><input type="text" name="landmark[name]" id="name" value="<%= @landmark.name%>">
-  <br><br>
-  <label>Year:</label><input type="text" name="landmark[year]" id="landmark_year" value="<%= @landmark.year%>"><br>
+<h1>Edit <%= @landmark.id %> </h1>
+<form method="POST" action="/landmarks/<%= @landmark.id %>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label><strong>Name:</strong></label><input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>"><br><br>
+  <label><strong>Year Completed:</strong></label><input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed %>"><br><br>
 
   <input type="submit" value="Edit Landmark">
 
