--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,9 @@
-<h2>Create New Landmark</h2>
+<h1>Create a New Landmark</h1>
+<form method="POST" action="/landmarks">
+  <label><strong>Name:</strong></label><input type="text" name="landmark[name]" id="landmark_name"><br><br>
+  <label><strong>Year Completed:</strong></label><input type="text" name="landmark[year_completed]" id="landmark_year_completed"><br><br>
 
-<!-- add content here -->
-
-<a class="button" href="/figures">Landmarks</a>
-<a class="button" href="/">Home</a>
+  <input type="submit" value="Create New Landmark">
+  <a class="button" href="/figures">Landmarks</a>
+  <a class="button" href="/">Home</a>
+</form>
